sdk/user/fongw/gengetopt-2.22.5/tests/wrong_multiple_occurrence.err
wrong_multiple_occurrence.ggo:6: syntax error -
wrong_multiple_occurrence.ggo:6: 	string optional multiple(-1-30) # WRONG
wrong_multiple_occurrence.ggo:6:                                     ^
