sdk/user/fongw/gengetopt-2.22.5/tests/wrong_multiple_occurrence.ggo
# wrong specification in multiple option number occurrences

option "limited-interval"     - "limited multiple option (with interval)" 
	string optional multiple(1-3) # OK
option "big-limited-interval" - "limited multiple option (with interval)" 
	string optional multiple(-1-30) # WRONG
